static/css/s2.css
/* ... */
.header .home {
  margin-top: 2px;
}
.header .home img {
  vertical-align: middle;
  height: 25px;
  margin-top: -7px;
  width: 92px;
}
.interface-hebrew .header .home img {
  width: 77px;
}
.header .accountLinks {
  display: flex;
  align-items: center;
  font-size: 16px;
  margin-top: 2px;
  color: #666;
}
.header .accountLinks > * {
  margin-inline-start: 17px;
  position: relative;
}
.header .accountLinks.anon a {
  margin: 0;
}
.header .accountLinks.anon a:last-child{
  background: #FFFFFF;
  border: 1px solid #EDEDEC;
  box-sizing: border-box;
  border-radius: 6px;
}
.header .help {
  margin-inline-start: 23px;
  margin-top: 8px;
}
.header .interfaceLinks {
  display: block;
  align-items: center;
  margin-top: 2px;
  color: #666;
  cursor: pointer;
  position: relative;
  -webkit-margin-start: 20px;
  -moz-margin-start: 20px;
  margin-inline-start: 10px;
}
.header .interfaceLinks img {
  height: 18px;
  width: 18px;
  vertical-align: middle;
  margin-inline-end: 2px;
}
.header .interfaceLinks a.interfaceLinks-button::after {
  display: inline-block;
  background: no-repeat url("/static/icons/chevron-down.svg");
  height: 10px;
  width: 12px;
  vertical-align: middle;
  content: "";
  transform: scale(0.75);
}
.header .interfaceLinks .interfaceLinks-menu {
  top: 35px;
  position: absolute;
  z-index: 1;
  width: 150px;
  background: #FBFBFA;
  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.25);
  border-radius: 6px;
  display:none;
  overflow:hidden;
}
.header .interfaceLinks .interfaceLinks-menu.profile-menu {
  top: 10px;
  display: block;
}
.header .interfaceLinks .interfaceLinks-menu .interfaceLinks-header.profile-menu {
  padding: 10px 17px 10px 17px;
  font-weight: 700;
  color: #000000;
  height: 23px;
}
.header .interfaceLinks .interfaceLinks-menu.profile-menu .profile-menu-middle {
  margin-top: 5px;
  margin-bottom: 5px;
}
.interface-english .header .interfaceLinks .interfaceLinks-menu {
  right: 0px;
  min-width: 150px;
  width: max-content;
}
.interface-hebrew .header .interfaceLinks .interfaceLinks-menu {
  left: 0px;
  min-width: 150px;
  width: max-content;
}
.header .interfaceLinks .interfaceLinks-menu .interfaceLinks-header {
  font-style: normal;
  font-weight: normal;
  font-size: 14px;
  line-height: 18px;
  color: #999999;
  padding: 12px;
  border-bottom: 1px solid #CCCCCC;
}
.header .interfaceLinks .interfaceLinks-menu .interfaceLinks-header:not(:first-child) {
  border-top: 1px solid #CCC;
}
.interface-english .header .interfaceLinks .interfaceLinks-menu .interfaceLinks-header {
  font-family: "Roboto", "Helvetica Neue", Helvetica, sans-serif;
}
.interface-hebrew .header .interfaceLinks .interfaceLinks-menu .interfaceLinks-header {
  font-family: "Heebo", sans-serif;
}
.interfaceLinks-options {
  display: flex;
  flex-direction: column;
  padding: 4px 0;
}
.header .interfaceLinks .interfaceLinks-option {
  display: flex;
  text-decoration: none;
  font-style: normal;
  font-weight: normal;
  font-size: 16px;
  line-height: 23px;
  text-align: right;
  color: #666666;
  padding: 5px;
  direction: ltr;
}
.header .interfaceLinks .interfaceLinks-option:hover {
  background-color: var(--lighter-grey);
}
.header .interfaceLinks .interfaceLinks-menu.open {
  display: block;
}
.interface-hebrew .header .interfaceLinks .interfaceLinks-option.int-bi {
  direction: rtl;
}
.interface-english .header .interfaceLinks .interfaceLinks-option.int-bi {
  direction: ltr;
}
.header .interfaceLinks .interfaceLinks-row {
  align-items: center;
  display: flex;
  text-decoration: none;
  font-style: normal;
  font-weight: 400;
  line-height: 18px;
  text-align: right;
  color: #000000;
  font-family: "Roboto", "Heebo", "Helvetica Neue", Ariel, sans-serif;
  padding: 5px 17px 5px 17px;
  font-size: 14px;
  text-decoration-color: #666666;
  height: 23px;
}
.header .interfaceLinks .interfaceLinks-row:hover {
  background-color: var(--lighter-grey);
}
div.interfaceLinks-row a:hover {
  text-decoration: none;
}
.header .interfaceLinks .interfaceLinks-row.languages {
  display: flex;
}
div.interfaceLinks-row a.active {
  color: #000000;
  display: flex;
  order: -1;
}
div.interfaceLinks-row a.active::after {
  content: "•";
  padding: 0 4px;
}
div.interfaceLinks-row a {
  color: #666666;
  display: flex;
}
.header .interfaceLinks .interfaceLinks-row.bottom {
  font-size: 14px;
  text-decoration-color: #000000;
}
.header .interfaceLinks .interfaceLinks-menu.profile-menu .interfaceLinks-hr {
  border-top:  1px solid #CCCCCC;
  margin-top: 0px;
  margin-bottom: 0px;
}
.header .interfaceLinks .interfaceLinks-row.logout {
  font-size: 14px;
  color: #666666;
  padding-top: 5px;
  margin-top: 5px;
  margin-bottom: 5px;
}
.header .profile-menu-he {
  color: #666666;
}
.header .interfaceLinks .interfaceLinks-option::before {
  content: "";
  font-family: FontAwesome;
  color: #999;
  font-weight: normal;
  font-size: 13px;
  font-style: normal;
  padding: 0 15px;
}
.header .interfaceLinks .interfaceLinks-option.active {
  order: -1;
}
.header .interfaceLinks .interfaceLinks-option.active::before {
  content: "\f00c";
  padding: 0 8px;
}
@media screen and (max-width: 910px) {
  .header .headerInner {
    padding: 0 15px;
  }
  .header .login.loginLink {
    display: none;
  }
  .header .accountLinks .login {
    padding: 5px 5px;
  }
  .header .accountLinks {
    margin-inline-start: 5px;
  }
}
@media screen and (max-width: 780px) {
  .header .donate {
    display: none;
  }
}
@media screen and (max-width: 700px) {
  .multiPanel .header .home {
    display: none;
  }
}
@media screen and (max-width: 580px) {
  .header .interfaceLinks,
  .header .help,
  .header .notifications {
    display: none;
  }
}
.header .notifications.unread::after {
  content:"";
  background-color: #CB6158;
  width: 8px;
  height: 8px;
  border-radius: 4px;
  display: block;
  top: 3px;
  right: 1px;
  position: absolute;
}
.header .login {
  color: #666;
  display: inline-block;
  line-height: 1;
  padding: 8px 15px;
}
/* ... */

